--- a/index.html
+++ b/index.html
@@ -271,11 +271,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project 1</h2>
+            <h2 class="experience-sub-title project-title">Calculator</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/souhaibaitmoh/Calculator'"
               >
                 Github
               </button>
@@ -289,11 +289,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project 2</h2>
+            <h2 class="experience-sub-title project-title">Banking</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/souhaibaitmoh/Banking-Program'"
               >
                 Github
               </button>
@@ -307,11 +307,11 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project 3</h2>
+            <h2 class="experience-sub-title project-title">YT Clone</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/souhaibaitmoh/YOUTUBE-CLONE'"
               >
                 Github
               </button>
@@ -385,7 +385,9 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2025 Souhayb Ait Moh N'ait Lhaj, All Rights Reserved</p>
+      <p>
+        Copyright &#169; 2025 Souhayb Ait Moh N'ait Lhaj, All Rights Reserved
+      </p>
     </footer>
     <script src="script.js"></script>
   </body>
