--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Landing-Page</h2>
+            <h2 class="experience-sub-title project-title">Product</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
